hide helper text

--- a/android/src/main/res/layout/payment_form_fragment_two.xml
+++ b/android/src/main/res/layout/payment_form_fragment_two.xml
@@ -54,7 +54,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="8dp"
-        app:include_helper="true"
+        app:include_helper="false"
         app:include_zip="false"
         app:input_background="@drawable/card_input_custom_background"
         app:cursor_color="@color/colorAccent"
